--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="app.css" />
+    <title>BaLL iS LyFe</title>
   </head>
   <body>
     <div id="app">
