--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>BaLL iS LyFe</title>
+    <title>Street Ball Stats</title>
     <style type="text/css">
       /* http://meyerweb.com/eric/tools/css/reset/ 
         v2.0 | 20110126
